build script, date parsing, read files using stream, csv parser, etc